# opm-reference-manual

./: .gitignore  README.md
.github/workflows/: check_keyword_linking.yml  ci.yml
docker/: README.md  pyproject.toml
docker/container/: docker-server.py  start.sh  update-libreoffice-config.sh
docker/docker_files/ubuntu2204-lo7.5.9/: Dockerfile  tag_name.txt
docker/docker_files/ubuntu2310-dev/: Dockerfile  tag_name.txt
docker/lo-ubuntu2204/: Dockerfile  README.md  build-image.ps1  build-image.sh  docker-soffice.sh  pyproject.toml  start-container.ps1  start-container.sh
docker/lo-ubuntu2204/container/: docker-server.py  open-blank-document.py  start.sh  update-libreoffice-config.sh
docker/lo-ubuntu2204/src/lodocker/: open_file.py
docker/src/lodocker/: click_helpers.py  colors.py  constants.py  container_helpers.py  docker_build.py  docker_run.py  docker_start.py  helpers.py  run_container.py
docker/tests/: test_find_git_root.py  test_user_input.py
docker/ubuntu2204-lo7.5.9/: build-image.ps1  build-image.sh  docker-soffice.ps1  pyproject.toml  run-container-interactively.sh  start-container.ps1
docker/ubuntu2204-lo7.5.9/container/: open-blank-document.py  start.sh
docker/ubuntu2204-lo7.5.9/src/lodocker/: open_file.py
fonts/: README.md
keyword-names/10.3/: keywords.txt
keyword-names/11.3/: keywords.txt
keyword-names/12.3/: keywords.txt
keyword-names/5.3/: keywords.txt
keyword-names/6.3/: keywords.txt
keyword-names/8.3/: keywords.txt
keyword-names/9.3/: keywords.txt
parts/appendices/: A.fodt  B.fodt  D.fodt  E.fodt  F.fodt
parts/chapters/: .~lock.2.fodt#  1.fodt  10.fodt  11.fodt  3.fodt  4.fodt  5.fodt  6.fodt  7.fodt  8.fodt  9.fodt
parts/chapters/sections/10/: 2.fodt
parts/chapters/sections/11/: 2.fodt
parts/chapters/sections/12/: 2.fodt
parts/chapters/sections/4/: 2.fodt
parts/chapters/sections/5/: 2.fodt
parts/chapters/sections/6/: 2.fodt
parts/chapters/sections/7/: 2.fodt
parts/chapters/sections/8/: 2.fodt
parts/chapters/sections/9/: 2.fodt
parts/chapters/subsections/10.3/: ADD.fodt  ADDREG.fodt  APIVD.fodt  AQANCONL.fodt  AQANNC.fodt  AQANTRC.fodt  AQUALIST.fodt  AQUANCON.fodt  AQUCHGAS.fodt  AQUCHWAT.fodt  AQUCON.fodt  AQUCT.fodt  AQUFET.fodt  AQUFETP.fodt  AQUFLUX.fodt  BC.fodt  BOUNDARY.fodt  BOX.fodt  COLUMNS.fodt  COPY.fodt  COPYREG.fodt  DATUM.fodt  DATUMR.fodt  DATUMRX.fodt  DEBUG.fodt  DYNAMICR.fodt  ECHO.fodt  END.fodt  ENDBOX.fodt  ENDDYN.fodt  ENDFIN.fodt  ENDINC.fodt  ENDSKIP.fodt  EQUALREG.fodt  EQUALS.fodt  EQUIL.fodt  EXTRAPMS.fodt  FILEUNIT.fodt  FORMFEED.fodt  GASCONC.fodt  (+84 more)
parts/chapters/subsections/11.3/: ALL.fodt  COLUMNS.fodt  DATE.fodt  DEBUG.fodt  ECHO.fodt  END.fodt  ENDINC.fodt  ENDSKIP.fodt  EXCEL.fodt  EXTRAPMS.fodt  FMWSET.fodt  FORMFEED.fodt  GMWSET.fodt  INCLUDE.fodt  MESSAGE.fodt  MESSAGES.fodt  MONITOR.fodt  NARROW.fodt  NEWTON.fodt  NMESSAGE.fodt  NOECHO.fodt  NOMONITO.fodt  NOWARN.fodt  OFM.fodt  PERFORMA.fodt  PYEND.fodt  PYINPUT.fodt  RPTONLY.fodt  RPTONLYO.fodt  RPTSMRY.fodt  RUNSUM.fodt  SEPARATE.fodt  SKIP.fodt  SKIP100.fodt  SKIP300.fodt  SUMMARY.fodt  SUMTHIN.fodt  WARN.fodt
parts/chapters/subsections/12.3/: ACTION.fodt  ACTIONG.fodt  ACTIONR.fodt  ACTIONS.fodt  ACTIONW.fodt  ACTIONX.fodt  AITS.fodt  AITSOFF.fodt  APILIM.fodt  AQUCHGAS.fodt  AQUCHWAT.fodt  AQUCT.fodt  AQUCWFAC.fodt  AQUFETP.fodt  AQUFLUX.fodt  BCPROP.fodt  BOUNDARY.fodt  BOX.fodt  BRANPROP.fodt  CALTRAC.fodt  CECON.fodt  CECONT.fodt  COLUMNS.fodt  COMPDAT.fodt  COMPDATL.fodt  COMPDATM.fodt  COMPFLSH.fodt  COMPIMB.fodt  COMPINJK.fodt  COMPLMPL.fodt  COMPLUMP.fodt  COMPOFF.fodt  COMPORD.fodt  COMPRIV.fodt  COMPRP.fodt  COMPRPL.fodt  COMPSEGL.fodt  COMPSEGS.fodt  COMPTRAJ.fodt  COMPVE.fodt  (+323 more)
parts/chapters/subsections/4.3/: COLUMNS.fodt  DEBUG.fodt  ECHO.fodt  END.fodt  ENDINC.fodt  ENDSKIP.fodt  (+11 more)
parts/meta/: kw_uri_map.txt  office_attrs.txt  styles_info.txt
parts/meta/sections/: font-face-decls.xml  master-styles.xml  meta.xml  scripts.xml  settings.xml  styles.xml
scripts/: README.md  pyproject.toml  text-diff.sh
scripts/docs/: Splitting-Strategies.md  Splitting-The-Manual.md
scripts/fonts/font-face-decls/: only-decl.xml
scripts/keyword-names/11.3/: keywords.txt
scripts/keyword-names/4.3/: keywords.txt
scripts/keyword-names/5.3/: keywords.txt
scripts/keyword-names/6.3/: keywords.txt
scripts/keyword-names/7.3/: keywords.txt
scripts/python/: README.md  pyproject.toml
scripts/python/docs/: Converting-to-other-fileformats.md  FODT-structure.md  Splitting-The-Manual.md
scripts/python/src/fodt/: add_keyword.py  add_keyword_status.py  automatic_styles_filter.py  check_links_office_binary.py  constants.py  create_subdocument.py  exceptions.py  extract_appendix.py  extract_chapters.py  extract_fonts.py  extract_metadata.py  extract_section.py  extract_style_info.py  extract_subsections.py  extract_tag_attrs.py  extract_xml_tag.py  fix_footer_style.py  fix_letter_k_footer.py  fix_span_not_kw.py  helpers.py  keyword_linker.py  keyword_linker2.py  keyword_uri_map_generator.py  remove_bookmarks.py  remove_chapters.py  remove_elements.py  remove_fonts.py  remove_span_tags.py  remove_subsections.py  remove_undefined_spans.py  set_fonts.py  split_git_commit.py  split_main.py  split_subdocument.py  splitter.py  styles_filter.py  templates.py  validate_automatic_styles.py  xml_filter_meta.py  xml_handlers.py  (+2 more)
scripts/python/src/fodt/data/: keyword_template.xml
scripts/python/tests/: conftest.py  test_helpers.py  test_split_git_commit.py
scripts/python/tests/data/git_repo/: COLUMNS_2.fodt
scripts/src/fodt/: add_keyword.py  add_keyword_status.py  automatic_styles_filter.py  constants.py  create_subdocument.py  extract_appendix.py  extract_chapters.py  extract_metadata.py  extract_section.py  extract_style_info.py  extract_tag_attrs.py  fix_ignored.py  helpers.py  remove_bookmarks.py  remove_fonts.py  remove_subsections.py  split_all.py  split_main.py  split_subdocument.py  splitter.py  validate_automatic_styles.py  xml_handlers.py  xml_helpers.py
scripts/src/fodt/data/: keyword_template.xml
(+929 files in other folders)
