[tool.poetry]
name = "lodocker"
version = "0.1.0"
description = ""
authors = ["Håkon Hægland <hakon.hagland@gmail.com>"]
readme = "README.md"
packages = [{include = "lodocker", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
requests = "^2.31.0"
colorama = "^0.4.6"
netifaces = "^0.11.0"

[tool.poetry.scripts]
lodocker-open-file = "lodocker.open_file:open_file"
lodocker-open-file-and-update = "lodocker.open_file:open_file_and_update"
lodocker-build-image = "lodocker.docker_build:build_docker_image"
lodocker-run-container = "lodocker.docker_run:run_container"
lodocker-start-container = "lodocker.docker_start:start_container"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
