[tool.poetry]
name = "fodt"
version = "0.1.0"
description = ""
authors = ["Håkon Hægland <hakon.hagland@gmail.com>"]
readme = "README.md"
packages = [{include = "fodt", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"

[tool.poetry.scripts]
fodt-add-keyword = "fodt.add_keyword:add_keyword"
fodt-splitter = "fodt.splitter:main"
fodt-extract-chapters = "fodt.splitter:extract_chapters"
fodt-extract-document-attrs = "fodt.splitter:extract_document_attributes"
fodt-extract-xml-tag = "fodt.splitter:extract_xml_tag"
fodt-extract-metadata = "fodt.splitter:extract_metadata"
fodt-create-subdocument = "fodt.splitter:create_subdocument"
fodt-remove-chapters = "fodt.splitter:remove_chapters"
fodt-remove-elements = "fodt.splitter:remove_elements"
fodt-split-all = "fodt.split_all:split_all"
fodt-split-main = "fodt.split_main:split_main"
fodt-split-subdocument = "fodt.split_subdocument:split_subdocument"
fodt-set-font-decls = "fodt.set_fonts:set_font_decls"
fodt-validate-document = "fodt.validate_automatic_styles:validate"
fodt-extract-style-info = "fodt.extract_style_info:extract_style_info"
fodt-extract-appendix = "fodt.extract_appendix:extract_appendix"
fodt-remove-lines = "fodt.remove_lines:remove_lines"
fodt-set-keyword-status = "fodt.add_keyword_status:set_keyword_status"
fodt-remove-bookmarks-from-master-styles = "fodt.remove_bookmarks:remove_bookmarks_from_master_styles"
fodt-extract-section = "fodt.extract_section:extract_section"
fodt-extract-fonts = "fodt.extract_fonts:extract_fonts"
fodt-remove-fonts = "fodt.remove_fonts:remove_fonts"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
