[tool.poetry]
name = "fodt"
version = "0.1.0"
description = ""
authors = ["Håkon Hægland <hakon.hagland@gmail.com>"]
readme = "README.md"
packages = [{include = "fodt", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
requests = "^2.31.0"

[tool.poetry.scripts]
fodt-add-keyword = "fodt.add_keyword:add_keyword"
fodt-create-subdocument = "fodt.splitter:create_subdocument"
fodt-extract-appendix = "fodt.extract_appendix:extract_appendix"
fodt-extract-chapters = "fodt.splitter:extract_chapters"
fodt-extract-document-attrs = "fodt.splitter:extract_document_attributes"
fodt-extract-fonts = "fodt.extract_fonts:extract_fonts"
fodt-extract-metadata = "fodt.splitter:extract_metadata"
fodt-extract-section = "fodt.extract_section:extract_section"
fodt-extract-style-info = "fodt.extract_style_info:extract_style_info"
fodt-extract-xml-tag = "fodt.splitter:extract_xml_tag"
fodt-fix-ignored-keywords = "fodt.fix_ignored:fix_ignored"
fodt-remove-bookmarks-from-master-styles = "fodt.remove_bookmarks:remove_bookmarks_from_master_styles"
fodt-remove-chapters = "fodt.splitter:remove_chapters"
fodt-remove-elements = "fodt.splitter:remove_elements"
fodt-remove-fonts = "fodt.remove_fonts:remove_fonts"
fodt-remove-lines = "fodt.remove_lines:remove_lines"
fodt-set-font-decls = "fodt.set_fonts:set_font_decls"
fodt-set-keyword-status = "fodt.add_keyword_status:set_keyword_status"
fodt-split-all = "fodt.split_all:split_all"
fodt-split-main = "fodt.split_main:split_main"
fodt-split-subdocument = "fodt.split_subdocument:split_subdocument"
fodt-splitter = "fodt.splitter:main"
fodt-validate-document = "fodt.validate_automatic_styles:validate"
fodt-xml-sax-filter-all = "fodt.xml_sax_filter_all:xml_sax_filter_all"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
