[tool.poetry]
name = "fodt"
version = "0.1.0"
description = ""
authors = ["Håkon Hægland <hakon.hagland@gmail.com>"]
readme = "README.md"
packages = [{include = "fodt", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
requests = "^2.31.0"
gitpython = "^3.1.42"
pytest = "^8.0.1"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
fodt-add-keyword = "fodt.add_keyword:add_keyword"
fodt-create-subdocument = "fodt.splitter:create_subdocument"
fodt-extract-appendix = "fodt.extract_appendix:extract_appendix"
fodt-extract-chapters = "fodt.splitter:extract_chapters"
fodt-extract-document-attrs = "fodt.splitter:extract_document_attributes"
fodt-extract-fonts = "fodt.extract_fonts:extract_fonts"
fodt-extract-metadata = "fodt.splitter:extract_metadata"
fodt-extract-section = "fodt.extract_section:extract_section"
fodt-extract-style-info = "fodt.extract_style_info:extract_style_info"
fodt-extract-xml-tag = "fodt.splitter:extract_xml_tag"
fodt-fix-ignored-keywords = "fodt.fix_ignored:fix_ignored"
fodt-fix-footer-style = "fodt.fix_footer_style:fix_footer_style"
fodt-fix-letter-k-footer = "fodt.fix_letter_k_footer:fix_letter_k_footer"
fodt-gen-kw-uri-map = "fodt.keyword_linker:gen_kw_uri_map"
fodt-link-keywords = "fodt.keyword_linker2:link_keywords"
fodt-remove-bookmarks-from-master-styles = "fodt.remove_bookmarks:remove_bookmarks_from_master_styles"
fodt-remove-chapters = "fodt.splitter:remove_chapters"
fodt-remove-elements = "fodt.splitter:remove_elements"
fodt-remove-fonts = "fodt.remove_fonts:remove_fonts"
fodt-remove-lines = "fodt.remove_lines:remove_lines"
fodt-remove-span-tags = "fodt.remove_span_tags:remove_version_span_tags"
fodt-remove-undefined-span-tags = "fodt.remove_undefined_spans:remove_undefined_span_tags"
fodt-set-font-decls = "fodt.set_fonts:set_font_decls"
fodt-set-keyword-status = "fodt.add_keyword_status:set_keyword_status"
fodt-split-all = "fodt.split_all:split_all"
fodt-split-commit = "fodt.split_git_commit:split_commit"
fodt-split-main = "fodt.split_main:split_main"
fodt-split-subdocument = "fodt.split_subdocument:split_subdocument"
fodt-splitter = "fodt.splitter:main"
fodt-validate-document = "fodt.validate_automatic_styles:validate"
fodt-xml-sax-filter-all = "fodt.xml_sax_filter_all:xml_sax_filter_all"
fodt-xml-sax-filter-meta = "fodt.xml_filter_meta:xml_sax_filter_meta"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
